--- a/notebooks/cotracker.ipynb
+++ b/notebooks/cotracker.ipynb
@@ -1,14 +1,239 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in /home/kimkj/.cache/torch/hub/facebookresearch_co-tracker_main\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "# Download the video\n",
+    "url = 'https://github.com/facebookresearch/co-tracker/raw/refs/heads/main/assets/apple.mp4'\n",
+    "\n",
+    "import imageio.v3 as iio\n",
+    "frames = iio.imread(url, plugin=\"pyav\")  # plugin=\"pyav\"\n",
+    "\n",
+    "device = 'cuda'\n",
+    "grid_size = 10\n",
+    "video = torch.tensor(frames).permute(0, 3, 1, 2)[None].float().to(device)  # B T C H W\n",
+    "\n",
+    "# Run Offline CoTracker:\n",
+    "cotracker = torch.hub.load(\"facebookresearch/co-tracker\", \"cotracker3_offline\").to(device)\n",
+    "pred_tracks, pred_visibility = cotracker(video, grid_size=grid_size) # B T N 2,  B T N 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video saved to ./saved_videos/video.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]]],\n",
+       "\n",
+       "\n",
+       "         [[[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]]],\n",
+       "\n",
+       "\n",
+       "         [[[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]]],\n",
+       "\n",
+       "\n",
+       "         ...,\n",
+       "\n",
+       "\n",
+       "         [[[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]]],\n",
+       "\n",
+       "\n",
+       "         [[[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]]],\n",
+       "\n",
+       "\n",
+       "         [[[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]],\n",
+       "\n",
+       "          [[255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           ...,\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255],\n",
+       "           [255, 255, 255,  ..., 255, 255, 255]]]]], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from cotracker.utils.visualizer import Visualizer\n",
+    "vis = Visualizer(save_dir=\"./saved_videos\", pad_value=120, linewidth=3)\n",
+    "vis.visualize(video, pred_tracks, pred_visibility)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tracker",
+   "display_name": "molmo",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.22"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
