finalize flow compute

--- a/notebooks/cotracker.ipynb
+++ b/notebooks/cotracker.ipynb
@@ -2,33 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cache found in /home/kimkj/.cache/torch/hub/facebookresearch_co-tracker_main\n"
+      "filename: /scr/shared/datasets/LIBERO/libero_10_highres_mp4/VID-DEMO_0_KITCHEN_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it_demo.mp4\n",
+      "gripper_x: 104.0\n",
+      "gripper_y: 42.0\n",
+      "height: 256\n",
+      "num_frames: 272\n",
+      "width: 256\n",
+      "cumulative_displacements shape: (272, 2)\n",
+      "displacements shape: (272, 2)\n",
+      "positions shape: (272, 2)\n",
+      "positions_normalized shape: (272, 2)\n",
+      "visibility shape: (272,)\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "# Download the video\n",
-    "url = 'https://github.com/facebookresearch/co-tracker/raw/refs/heads/main/assets/apple.mp4'\n",
+    "import h5py\n",
     "\n",
-    "import imageio.v3 as iio\n",
-    "frames = iio.imread(url, plugin=\"pyav\")  # plugin=\"pyav\"\n",
-    "\n",
-    "device = 'cuda'\n",
-    "grid_size = 10\n",
-    "video = torch.tensor(frames).permute(0, 3, 1, 2)[None].float().to(device)  # B T C H W\n",
-    "\n",
-    "# Run Offline CoTracker:\n",
-    "cotracker = torch.hub.load(\"facebookresearch/co-tracker\", \"cotracker3_offline\").to(device)\n",
-    "pred_tracks, pred_visibility = cotracker(video, grid_size=grid_size) # B T N 2,  B T N 1"
+    "# Open the file\n",
+    "with h5py.File('/scr/shared/datasets/LIBERO/libero_10_2D/VID-DEMO_0_KITCHEN_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it_demo_2D.hdf5', 'r') as f:\n",
+    "    # Print the metadata\n",
+    "    metadata = f['metadata']\n",
+    "    for key in metadata.attrs:\n",
+    "        print(f\"{key}: {metadata.attrs[key]}\")\n",
+    "    \n",
+    "    # Access the tracking data\n",
+    "    tracking = f['tracking']\n",
+    "    displacements = tracking['displacements'][:]\n",
+    "    \n",
+    "    # Print the shape of each dataset\n",
+    "    for dataset_name in tracking.keys():\n",
+    "        print(f\"{dataset_name} shape: {tracking[dataset_name].shape}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
